# homelab-ops-ansible

./: .ansible-lint  .ansible-lint-ignore  .clinerules-code  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .releaserc.js  .releaserc.json  .shellcheckrc  .yamllint  CHANGELOG.md  CONTRIBUTING.md  README.md  commitlint.config.js  mise.toml  package-lock.json  package.json  projectBrief.md  pyproject.toml  requirements.txt
.github/: renovate.json
.github/renovate/: exceptions-confidence.json  exceptions-min-release-age.json  semantic-commit-scope.json
.github/scripts/: detect-latest-ubuntu-tarball.sh
.github/workflows/: lint.yaml  release.yaml  renovate.yaml  test-archive.yaml  test-block_device.yaml  test-configure.yaml  test-k3s.yaml  test-os.yaml  test-packages.yaml  test-raspberry_pi.yaml
archive/: README.md  galaxy.yml
archive/molecule/sync/: converge.yml  molecule.yml  prepare.yml  verify.yml
archive/molecule/unpack/: converge.yml  molecule.yml  prepare.yml  verify.yml
archive/roles/sync/: README.md
archive/roles/unpack/: README.md
block_device/: README.md  galaxy.yml
block_device/molecule/filesystem/: converge.yml  prepare.yml  verify.yml
configure/: README.md  galaxy.yml
configure/roles/fstab/: README.md
k3s/: README.md  galaxy.yml
k3s/playbooks/: generate_test_config.yaml  init_k3s_node.yaml  install.yaml
memory-bank/: activeContext.md  architectureOverview.md  decisionLog.md  implementationReviewFindings.md  productContext.md  progress.md
os/: README.md  galaxy.yml
raspberry_pi/: README.md  galaxy.yml
(+192 files in other folders)
