[tool.uv]
package = false

[project]
name = "homelab-ops-ansible"
version = "0.0.0" # This is not used.
requires-python = ">=3.13,<3.14"
dependencies = [
    "ansible-core==2.18.8",
    "jmespath==1.0.1",
    "kubernetes==33.1.0"
]

[dependency-groups]
dev = [
    "ansible-lint==25.7.0",
    "docker==7.1.0",
    "molecule==25.7.0",
    "molecule-plugins[docker]==23.7.0"
]
