[tool.uv]
package = false

[project]
name = "homelab-ops-ansible"
version = "0.0.0" # This is not used.
requires-python = ">=3.13,<3.14"
dependencies = [
    "ansible-core==2.18.8",
    "jmespath==1.0.1",
    "kubernetes==34.1.0"
]

[dependency-groups]
dev = [
    "ansible-lint==25.12.2",
    "docker==7.1.0",
    "molecule==25.12.0",
    "molecule-plugins[docker]==25.8.12"
]
